--- a/projectsegura/projectsegura/templates/verlistado.html
+++ b/projectsegura/projectsegura/templates/verlistado.html
@@ -1,7 +1,7 @@
 {% extends 'pg.html' %} 
 
 {% block titulo %} <title>ListadoCredenciales</title> {% endblock %}
-{% block jumbo %} Iniciar Sesión {% endblock %}
+{% block jumbo %} Listado De Cuentas {% endblock %}
 {% block cuerpo %}
 	
 {% endblock %}
