--- a/projectsegura/projectsegura/templates/pg.html
+++ b/projectsegura/projectsegura/templates/pg.html
@@ -5,12 +5,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% block estilos %} {% endblock %}
+  
+  <style>
+    html{
+      height: 100%;
+    }
+
+    body{
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    footer{
+      position: sticky;
+      top: 100%;
+
+    }
+  </style>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="/static/js/generar.js"></script>
+
   
   {% block scri %} {% endblock %}
 
@@ -25,8 +44,8 @@
     <h1 class="jumbotron" style="text-align: center;">{% block jumbo %}{% endblock %}</h1>
   </header>
 
-  <!-- Contenedor general -->
-  <div class="container-fluid">
+  <!-- Contenedor para barra de navegacion-->
+  
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <a class="navbar-brand" href="" >
         <b>&lt; / &gt;</b>
@@ -47,11 +66,15 @@
             {% block compartirCredencial %}  {% endblock %}
         </ul>
       </div>
-      <li>
-        <a class="btn btn-danger" role="button" href="/logout">Cerrar Sesion</a>
-      </li>
+      <div class="collapse navbar-collapse" id="menu">
+        <ul class="navbar-nav ml-auto">
+          <li>
+            <a class="btn btn-danger" role="button" href="/logout">Cerrar Sesion</a>
+          </li>
+        </ul>
+      </div>
     </nav>
-  </div>
+  
 
   <div class="container">
       <div class="row" style="height: 30px;"></div>
