iniciaodesesion limicaiondeintentos 2af telegram

--- a/projectsegura/projectsegura/templates/registrar.html
+++ b/projectsegura/projectsegura/templates/registrar.html
@@ -1,5 +1,5 @@
 {% extends 'pg.html' %} 
-
+{% block scr %} <script src="/static/js/validar.js"></script> {% endblock %}
 {% block titulo %} <title>Registro</title> {% endblock %}
 {% block jumbo %} Registrar Usuario {% endblock %}
 {% block cuerpo %}
