--- a/projectsegura/projectsegura/templates/iniciar_sesion.html
+++ b/projectsegura/projectsegura/templates/iniciar_sesion.html
@@ -8,6 +8,48 @@
         <div class="row" style="height: 33px;"></div>
     </div>
 
+    {% if okay %}
+    
+    <!-- Modal Descarga -->
+    <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-h  idden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                    <div class="modal-header">
+                            <h4 class="modal-title">Ingresar codigo</h4>
+                                <button type="button" class="close text-danger" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                    </div>
+                    <div class="modal-body text-center">
+                        <div class="container-fluid">
+                            <form action="/iniciar_sesion" method="post">
+                                {% csrf_token %}
+                                <input type="hidden" name="form_type" value="formDos"> <!-- identificar formulario -->
+                                <input type="hidden" name="usuario" id="usuario" value="{{ usuario }}">
+                                <input type="hidden" name="password" id="password" value="{{ contra }}">
+                                <div class="form-group">
+                                    <label for="codigo">Codigo de Verificacion</label>
+                                    <input type="text" name="codigo" id="codigo" class="form-control" placeholder="Codigo de verificacion">
+                                </div>
+                                <button type="submit" class="btn btn-primary">Enviar</button>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+                    </div>
+            </div>
+        </div>
+    </div>
+
+    {% block scr %} <script>
+        $(function(){
+            $("#modelId").modal('toggle');
+        });
+    </script> {% endblock %}
+    
+    {% endif %}
+
     {% if errores %}
 
         <!-- Modal backend -->
@@ -48,9 +90,10 @@
     <div class="container">
         <form action="/iniciar_sesion" method="POST">
             {% csrf_token %}
+            <input type="hidden" name="form_type" value="formUno"> <!-- identificar formulario -->
             <div class="form-group">
                 <label for="usuario">Usuario</label>
-                <input type="text" name="usuario" id="usuario" class="form-control" placeholder="Nick de usuario" value="{{ usuario }}">
+                <input type="text" name="usuario" id="usuario" class="form-control" placeholder="Usuario" value="{{ usuario }}">
             </div>
             <div class="form-group">
                 <label for="contraseña">Contraseña</label>
