frontend registrar y modelo

--- a/projectsegura/projectsegura/templates/pg.html
+++ b/projectsegura/projectsegura/templates/pg.html
@@ -47,7 +47,7 @@
   <!-- Contenedor para barra de navegacion-->
   
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-      <a class="navbar-brand" href="" >
+      <a class="navbar-brand" href="/iniciar_sesion" >
         <b>&lt; / &gt;</b>
       </a>
       <button class="navbar-toggler" data-target="#menu" data-toggle='collapse' type="button">
