--- a/projectsegura/projectsegura/templates/registrar.html
+++ b/projectsegura/projectsegura/templates/registrar.html
@@ -20,14 +20,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-sm btn-light" data-toggle="popover" title="Politica de Contraseñas" data-placement="left" data-html="true" data-content="La contraseña debe tener solo letras y numeros del alfabeto latino.<br/>
-                      La contraseña debe tener al menos:<br/>
-                        8 caracteres<br/>
-                        1 letra mayuscula<br/>
-                        1 numero<br/>
-                        1 letra minuscula <br/>
-                        1 caracter exclusivo(.,*!?@¿¡/#$%&)">Politica de contraseñas</button>
-                    <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         </div>
