correcion erroes registrar

--- a/projectsegura/projectsegura/templates/registrarcredencial.html
+++ b/projectsegura/projectsegura/templates/registrarcredencial.html
@@ -27,7 +27,7 @@
 				                <input type="hidden" name="url" id="url" value="{{ url }}">
                                 <div class="form-group">
                                     <label for="contraseñaM">Contraseña</label>
-                                    <input type="text" name="contrasenaM" id="contrasenaM" class="form-control" placeholder="contraseña maestra" value="{{ contrasenaM }}">
+                                    <input type="password" name="contrasenaM" id="contrasenaM" class="form-control" placeholder="contraseña maestra" value="{{ contrasenaM }}">
                                 </div>
                                 <button type="submit" class="btn btn-primary">Confirmar</button>
                             </form>
