--- a/projectsegura/projectsegura/templates/registrarcredencial.html
+++ b/projectsegura/projectsegura/templates/registrarcredencial.html
@@ -118,6 +118,11 @@
               <small id="helpId" class="form-text text-muted">http://www.sitio.com</small>
             </div>
             
+            <div class="form-group">
+              <label for="detalles">Detalles</label>
+              <input type="text" name="detalles" id="detalles" class="form-control" placeholder="Detalles de la cuenta o servicio" value="{{ detalles }}" >
+            </div>
+            
             <div class="container">
                 <div class="row" style="height: 30px;"></div>
             </div>
