--- a/projectsegura/projectsegura/templates/verdetallescuenta.html
+++ b/projectsegura/projectsegura/templates/verdetallescuenta.html
@@ -3,5 +3,219 @@
 {% block titulo %} <title>VerDetalles</title> {% endblock %}
 {% block jumbo %} Detalles {% endblock %}
 {% block cuerpo %}
-	
+    {% if okay %}
+    
+    <!-- Modal ingresa aqui la contraseña -->
+    <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-h  idden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                    <div class="modal-header">
+                            <h4 class="modal-title">Ingresar tu contraseña</h4>
+                            <button type="button" class="close text-danger" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                    </div>
+                    <div class="modal-body text-center">
+                        <div class="container-fluid">
+                            <form action="/ver_detalles_credencial" method="POST">
+                                {% csrf_token %}
+                                <input type="hidden" name="form_type" value="formDos"> <!-- identificar formulario -->
+                                <div class="form-group">
+                                    <label for="contraseñaM">Contraseña</label>
+                                    <input type="password" name="contrasenaM" id="contrasenaM" class="form-control" placeholder="contraseña maestra" value="{{ contrasenaM }}">
+                                </div>
+                                <button type="submit" class="btn btn-primary">Confirmar</button>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        {% if erroresf2 %}
+                             {% for error in erroresf2 %}
+                                <li class="list-group-item">{{ error }}</li>
+                             {% endfor %}
+                        {% endif %}
+                    </div>
+            </div>
+        </div>
+    </div>
+
+    {% block scr %} <script>
+        $(function(){
+            $("#modelId").modal('toggle');
+        });
+    </script> {% endblock %}
+    
+    {% endif %}
+
+    {% if errores %}
+
+        <!-- Modal backend -->
+        <div class="modal fade" id="modelIdE" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-h  idden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                        <div class="modal-header">
+                                <h4 class="modal-title">Errores</h4>
+                                    <button type="button" class="close text-danger" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                            </div>
+                    <div class="modal-body">
+                        <div class="container-fluid">
+                            <ul class="list-group list-group-flush">
+                                {% for error in errores %}
+                                <li class="list-group-item">{{ error }}</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        {% block scri %} <script>
+            $(function(){
+                $("#modelIdE").modal('toggle');
+            });
+        </script> {% endblock %}
+
+    {% endif %}
+
+	<div class="container text-center">
+        <div class="row">
+            <div class="col-sm-3"></div>
+            
+            <div class="col-sm-3">
+                <h5>Nombre de la cuenta:</h5>
+            </div>
+
+            <div class="col-sm-1">
+            {% for credencial in credenciales %}
+                <em><h5>{{ credencial.nombre_cuenta }}</h5></em>
+            {% endfor %}
+            </div>
+
+            <div class="col-sm-5"></div>
+        </div>
+
+        <div class="container">
+            <div class="row" style="height: 35px;"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-3"></div>
+            
+            <div class="col-sm-3">
+                <h5>Usuario de la cuenta:</h5>
+            </div>
+
+            <div class="col-sm-1">
+            {% for credencial in credenciales %}
+                <em><h5>{{ credencial.usuario_cuenta }}</h5></em>
+            {% endfor %}
+            </div>
+
+            <div class="col-sm-5"></div>
+        </div>
+
+        <div class="container">
+            <div class="row" style="height: 35px;"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-3"></div>
+            
+            <div class="col-sm-3">
+                <h5>Contraseña de la cuenta:</h5>
+            </div>
+            
+            {% if contracifrada %}
+            <div class="col-sm-1">
+                <form class="form-inline" action="/ver_detalles_credencial" method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="form_type" value="formUno"> <!-- identificar formulario -->  
+                    {% for credencial in credenciales %}
+                    
+                        <input type="password" name="contrasenaM" id="contrasenaM" class="form-control mb-2 mr-sm-2"  value="{{ credencial.contra_cuenta }}">
+                        
+                        <button type="submit" class="btn btn-outline-primary inline">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-slash-fill" viewBox="0 0 16 16">
+                                <path d="m10.79 12.912-1.614-1.615a3.5 3.5 0 0 1-4.474-4.474l-2.06-2.06C.938 6.278 0 8 0 8s3 5.5 8 5.5a7.029 7.029 0 0 0 2.79-.588zM5.21 3.088A7.028 7.028 0 0 1 8 2.5c5 0 8 5.5 8 5.5s-.939 1.721-2.641 3.238l-2.062-2.062a3.5 3.5 0 0 0-4.474-4.474L5.21 3.089z"></path>
+                                <path d="M5.525 7.646a2.5 2.5 0 0 0 2.829 2.829l-2.83-2.829zm4.95.708-2.829-2.83a2.5 2.5 0 0 1 2.829 2.829zm3.171 6-12-12 .708-.708 12 12-.708.708z"></path>
+                              </svg>
+                        </button>
+
+                        
+                    {% endfor %}
+                </form>  
+            </div>
+            {% endif %}
+            
+
+            {% if contradescifrada %}
+                <div class="col-sm-1">
+                    <form class="form-inline" action="/ver_detalles_credencial" method="POST">
+                        {% csrf_token %}
+                        <input type="hidden" name="form_type" value="formTres"> <!-- identificar formulario --> 
+                        
+                        <input type="text" name="contrasenaM" id="contrasenaM" class="form-control mb-2 mr-sm-2"  value="{{ contradescifrada }}">
+                            
+                        <button type="submit" class="btn btn-outline-primary inline">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-slash-fill" viewBox="0 0 16 16">
+                                <path d="m10.79 12.912-1.614-1.615a3.5 3.5 0 0 1-4.474-4.474l-2.06-2.06C.938 6.278 0 8 0 8s3 5.5 8 5.5a7.029 7.029 0 0 0 2.79-.588zM5.21 3.088A7.028 7.028 0 0 1 8 2.5c5 0 8 5.5 8 5.5s-.939 1.721-2.641 3.238l-2.062-2.062a3.5 3.5 0 0 0-4.474-4.474L5.21 3.089z"></path>
+                                <path d="M5.525 7.646a2.5 2.5 0 0 0 2.829 2.829l-2.83-2.829zm4.95.708-2.829-2.83a2.5 2.5 0 0 1 2.829 2.829zm3.171 6-12-12 .708-.708 12 12-.708.708z"></path>
+                            </svg>
+                        </button>
+                    </form>  
+                </div>
+            {% endif %}
+
+
+
+            <div class="col-sm-5"></div>
+        </div>
+
+        <div class="container">
+            <div class="row" style="height: 35px;"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-3"></div>
+            
+            <div class="col-sm-3">
+                <h5>URL:</h5>
+            </div>
+
+            <div class="col-sm-1">
+            {% for credencial in credenciales %}
+                <em><h5>{{ credencial.url }}</h5></em>
+            {% endfor %}
+            </div>
+
+            <div class="col-sm-5"></div>
+        </div>
+
+        <div class="container">
+            <div class="row" style="height: 35px;"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-3"></div>
+            
+            <div class="col-sm-3">
+                <h5>Detalles de la cuenta:</h5>
+            </div>
+
+            <div class="col-sm-1">
+            {% for credencial in credenciales %}
+                <em><h5>{{ credencial.detalles }}</h5></em>
+            {% endfor %}
+            </div>
+
+            <div class="col-sm-5"></div>
+        </div>
+
+    </div>
 {% endblock %}
