--- a/projectsegura/projectsegura/templates/verlistado.html
+++ b/projectsegura/projectsegura/templates/verlistado.html
@@ -4,28 +4,58 @@
 {% block jumbo %} Listado De Cuentas {% endblock %}
 {% block cuerpo %}
 <div class="container">
-	<form id="listado" action="/ver_detalles_credencial" method="POST">
+	<form id="listado" action="/ver_listado" method="POST">
 		{% csrf_token %}
+		<input type="hidden" name="form_type" value="formUno"> <!-- identificar formulario -->
+		<input type="hidden" name="nombreCuenta" id="nombreCuenta" value="{{ credencial.nombre_cuenta }}">
+        <input type="hidden" name="usuarioCuenta" id="usuarioCuenta" value="{{ credencial.usuario_cuenta }}">
 		<ul class="list-group text-center" id="listac">
 			{% for credencial in credencialesx %}
-			<li class="list-group" id="cred" onclick="selectcred()">
+			<li class="list-group-item border border-dark" id="cred" onclick="selectcred()">
 				<h1>{{ credencial.nombre_cuenta }}</h1>
-				<br>
+				<div class="container">
+					<div class="row" style="height: 5px;"></div>
+				</div>
 				<h5>{{ credencial.usuario_cuenta }}</h5>
-				<div style="height: 12px;"></div>
+
+				<div class="container">
+					<div class="row" style="height: 15px;"></div>
+				</div>
+
 				<div class="row">
-					<div class="form-group col-sm-5">
+
+					<div class="col-sm-5">
 					</div>
-					<div class="form-group col-sm-1">
+
+					<form action="">
+					</form>
+
+					<form class="col-sm-1" action="/ver_listado" method="POST">
+						{% csrf_token %}
+						<input type="hidden" name="form_type" value="formDos"> <!-- identificar formulario -->
+						<input type="hidden" name="nombreCuenta" id="nombreCuenta" value="{{ credencial.nombre_cuenta }}">
+                        <input type="hidden" name="usuarioCuenta" id="usuarioCuenta" value="{{ credencial.usuario_cuenta }}">
+						
 						<button type="submit" class="btn btn-outline-primary btn-sm">Detalles</button>
-					</div>
-					<div class="form-group col-sm-1">
+					</form>
+
+					<form class="col-sm-1" action="/ver_listado" method="POST">
+						{% csrf_token %}
+						<input type="hidden" name="form_type" value="formTres"> <!-- identificar formulario -->
+                        <input type="hidden" name="nombreCuenta" id="nombreCuenta" value="{{ credencial.nombre_cuenta }}">
+                        <input type="hidden" name="usuarioCuenta" id="usuarioCuenta" value="{{ credencial.usuario_cuenta }}">
+
 						<button type="submit" class="btn btn-outline-primary btn-sm">Editar</button>
+					</form>
+
+					<div class="col-sm-5">
 					</div>
-					<div class="form-group col-sm-5">
-					</div>
+
 				</div>
 			</li>
+			<div class="container">
+				<div class="row" style="height: 15px;"></div>
+			</div>
 			{% endfor %}
 		</ul>
 	</form>
