--- a/projectsegura/projectsegura/templates/registrarcredencial.html
+++ b/projectsegura/projectsegura/templates/registrarcredencial.html
@@ -25,6 +25,7 @@
                                 <input type="hidden" name="usuarioC" id="usuarioC" value="{{ usuarioC }}">
 				                <input type="hidden" name="contrasena" id="contrasena" value="{{ contrasena }}">
 				                <input type="hidden" name="url" id="url" value="{{ url }}">
+                                <input type="hidden" name="detalles" id="detalles" value="{{ detalles }}">
                                 <div class="form-group">
                                     <label for="contraseñaM">Contraseña</label>
                                     <input type="password" name="contrasenaM" id="contrasenaM" class="form-control" placeholder="contraseña maestra" value="{{ contrasenaM }}">
