--- a/projectsegura/projectsegura/templates/verdetallescuenta.html
+++ b/projectsegura/projectsegura/templates/verdetallescuenta.html
@@ -3,6 +3,7 @@
 {% block titulo %} <title>VerDetalles</title> {% endblock %}
 {% block jumbo %} Detalles {% endblock %}
 {% block cuerpo %}
+
     {% if okay %}
     
     <!-- Modal ingresa aqui la contraseña -->
@@ -87,7 +88,7 @@
         <div class="row">
             <div class="col-sm-3"></div>
             
-            <div class="col-sm-3">
+            <div class="col-mb-3">
                 <h5>Nombre de la cuenta:</h5>
             </div>
 
@@ -107,7 +108,7 @@
         <div class="row">
             <div class="col-sm-3"></div>
             
-            <div class="col-sm-3">
+            <div class="col-mb-3">
                 <h5>Usuario de la cuenta:</h5>
             </div>
 
@@ -127,20 +128,20 @@
         <div class="row">
             <div class="col-sm-3"></div>
             
-            <div class="col-sm-3">
-                <h5>Contraseña de la cuenta:</h5>
+            <div class="col-mb-3">
+                <h5>Contraseña de la cuenta:&nbsp;</h5>
             </div>
             
             {% if contracifrada %}
-            <div class="col-sm-1">
+            <div class="col-mb-1">
                 <form class="form-inline" action="/ver_detalles_credencial" method="POST">
                     {% csrf_token %}
                     <input type="hidden" name="form_type" value="formUno"> <!-- identificar formulario -->  
                     {% for credencial in credenciales %}
                     
-                        <input type="password" name="contrasenaM" id="contrasenaM" class="form-control mb-2 mr-sm-2"  value="{{ credencial.contra_cuenta }}">
+                        <input type="password" name="contrasenaM" id="contrasenaM" class="form-control mb-1"  value="{{ credencial.contra_cuenta }}">
                         
-                        <button type="submit" class="btn btn-outline-primary inline">
+                        <button type="submit" class="btn btn-outline-primary mb">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-slash-fill" viewBox="0 0 16 16">
                                 <path d="m10.79 12.912-1.614-1.615a3.5 3.5 0 0 1-4.474-4.474l-2.06-2.06C.938 6.278 0 8 0 8s3 5.5 8 5.5a7.029 7.029 0 0 0 2.79-.588zM5.21 3.088A7.028 7.028 0 0 1 8 2.5c5 0 8 5.5 8 5.5s-.939 1.721-2.641 3.238l-2.062-2.062a3.5 3.5 0 0 0-4.474-4.474L5.21 3.089z"></path>
                                 <path d="M5.525 7.646a2.5 2.5 0 0 0 2.829 2.829l-2.83-2.829zm4.95.708-2.829-2.83a2.5 2.5 0 0 1 2.829 2.829zm3.171 6-12-12 .708-.708 12 12-.708.708z"></path>
@@ -155,17 +156,17 @@
             
 
             {% if contradescifrada %}
-                <div class="col-sm-1">
+                <div class="col-mb-1">
                     <form class="form-inline" action="/ver_detalles_credencial" method="POST">
                         {% csrf_token %}
                         <input type="hidden" name="form_type" value="formTres"> <!-- identificar formulario --> 
                         
-                        <input type="text" name="contrasenaM" id="contrasenaM" class="form-control mb-2 mr-sm-2"  value="{{ contradescifrada }}">
+                        <input type="text" name="contrasenaM" id="contrasenaM" class="form-control mb-2"  value="{{ contradescifrada }}">
                             
-                        <button type="submit" class="btn btn-outline-primary inline">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-slash-fill" viewBox="0 0 16 16">
-                                <path d="m10.79 12.912-1.614-1.615a3.5 3.5 0 0 1-4.474-4.474l-2.06-2.06C.938 6.278 0 8 0 8s3 5.5 8 5.5a7.029 7.029 0 0 0 2.79-.588zM5.21 3.088A7.028 7.028 0 0 1 8 2.5c5 0 8 5.5 8 5.5s-.939 1.721-2.641 3.238l-2.062-2.062a3.5 3.5 0 0 0-4.474-4.474L5.21 3.089z"></path>
-                                <path d="M5.525 7.646a2.5 2.5 0 0 0 2.829 2.829l-2.83-2.829zm4.95.708-2.829-2.83a2.5 2.5 0 0 1 2.829 2.829zm3.171 6-12-12 .708-.708 12 12-.708.708z"></path>
+                        <button type="submit" class="btn btn-outline-primary mb">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye-fill" viewBox="0 0 16 16">
+                                <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"></path>
+                                <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"></path>
                             </svg>
                         </button>
                     </form>  
@@ -184,7 +185,7 @@
         <div class="row">
             <div class="col-sm-3"></div>
             
-            <div class="col-sm-3">
+            <div class="col-mb-3">
                 <h5>URL:</h5>
             </div>
 
@@ -204,11 +205,11 @@
         <div class="row">
             <div class="col-sm-3"></div>
             
-            <div class="col-sm-3">
-                <h5>Detalles de la cuenta:</h5>
+            <div class="col-mb-3">
+                <h5>Detalles de la cuenta:&nbsp; </h5>
             </div>
 
-            <div class="col-sm-1">
+            <div class="col-mb-1">
             {% for credencial in credenciales %}
                 <em><h5>{{ credencial.detalles }}</h5></em>
             {% endfor %}
