--- a/projectsegura/projectsegura/templates/editarcredencial.html
+++ b/projectsegura/projectsegura/templates/editarcredencial.html
@@ -10,7 +10,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                     <div class="modal-header">
-                            <h4 class="modal-title">Ingresar tu contraseña</h4>
+                            <h4 class="modal-title">Ingresa tu contraseña</h4>
                             <button type="button" class="close text-danger" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -22,8 +22,8 @@
                                 <input type="hidden" name="form_type" value="formDos"> <!-- identificar formulario -->
                                 <input type="hidden" name="nomCuenta" id="nomCuenta" value="{{ nomCuenta }}">
                                 <input type="hidden" name="usuarioC" id="usuarioC" value="{{ usuarioC }}">
-				                <input type="hidden" name="contrasena" id="contrasena" value="{{ contrasena }}">
-				                <input type="hidden" name="url" id="url" value="{{ url }}">
+				<input type="hidden" name="contrasena" id="contrasena" value="{{ contrasena }}">
+				<input type="hidden" name="url" id="url" value="{{ url }}">
                                 <input type="hidden" name="detalles" id="detalles" value="{{ detalles }}">
                                 <div class="form-group">
                                     <label for="contraseñaM">Contraseña</label>
@@ -91,7 +91,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-4"></div>
-            <div class="col-mb-2"><h5>Editando La credencial de:</h5></div>
+            <div class="col-mb-2"><h5>Editando la credencial de:</h5></div>
             <div class="col-sm-1"><em><h5>{{ credencial.nombre_cuenta }}</h5></em></div>
             <div class="col-sm-5"></div>
         </div>
@@ -106,7 +106,7 @@
             <div class="form-group">
               <label for="nomCuenta">Nombre Cuenta</label>
               <input type="text"
-                class="form-control" name="nomCuenta" id="nomCuenta" aria-describedby="helpId" placeholder="nombre de la cuenta o servicio" value="{{ credencial.nombre_cuenta }}">
+                class="form-control" name="nomCuenta" id="nomCuenta" aria-describedby="helpId" placeholder="Nombre de la cuenta o servicio" value="{{ credencial.nombre_cuenta }}">
             </div>
 
             <div class="form-group">
