--- a/projectsegura/projectsegura/templates/verdetallescuenta.html
+++ b/projectsegura/projectsegura/templates/verdetallescuenta.html
@@ -11,7 +11,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                     <div class="modal-header">
-                            <h4 class="modal-title">Ingresar tu contraseña</h4>
+                            <h4 class="modal-title">Ingresa tu contraseña</h4>
                             <button type="button" class="close text-danger" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -23,7 +23,7 @@
                                 <input type="hidden" name="form_type" value="formDos"> <!-- identificar formulario -->
                                 <div class="form-group">
                                     <label for="contraseñaM">Contraseña</label>
-                                    <input type="password" name="contrasenaM" id="contrasenaM" class="form-control" placeholder="contraseña maestra" value="{{ contrasenaM }}">
+                                    <input type="password" name="contrasenaM" id="contrasenaM" class="form-control" placeholder="Contraseña maestra" value="{{ contrasenaM }}">
                                 </div>
                                 <button type="submit" class="btn btn-primary">Confirmar</button>
                             </form>
