--- a/projectsegura/projectsegura/templates/registrarcredencial.html
+++ b/projectsegura/projectsegura/templates/registrarcredencial.html
@@ -11,7 +11,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                     <div class="modal-header">
-                            <h4 class="modal-title">Ingresar tu contraseña</h4>
+                            <h4 class="modal-title">Ingresa tu contraseña</h4>
                             <button type="button" class="close text-danger" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -23,8 +23,8 @@
                                 <input type="hidden" name="form_type" value="formDos"> <!-- identificar formulario -->
                                 <input type="hidden" name="nomCuenta" id="nomCuenta" value="{{ nomCuenta }}">
                                 <input type="hidden" name="usuarioC" id="usuarioC" value="{{ usuarioC }}">
-				                <input type="hidden" name="contrasena" id="contrasena" value="{{ contrasena }}">
-				                <input type="hidden" name="url" id="url" value="{{ url }}">
+				<input type="hidden" name="contrasena" id="contrasena" value="{{ contrasena }}">
+				<input type="hidden" name="url" id="url" value="{{ url }}">
                                 <input type="hidden" name="detalles" id="detalles" value="{{ detalles }}">
                                 <div class="form-group">
                                     <label for="contraseñaM">Contraseña</label>
@@ -99,7 +99,7 @@
             <div class="form-group">
               <label for="nomCuenta">Nombre Cuenta</label>
               <input type="text"
-                class="form-control" name="nomCuenta" id="nomCuenta" aria-describedby="helpId" placeholder="nombre de la cuenta o servicio" value="{{ nomCuenta }}">
+                class="form-control" name="nomCuenta" id="nomCuenta" aria-describedby="helpId" placeholder="Nombre de la cuenta o servicio" value="{{ nomCuenta }}">
             </div>
 
             <div class="form-group">
