--- a/projectsegura/projectsegura/templates/pg.html
+++ b/projectsegura/projectsegura/templates/pg.html
@@ -58,7 +58,7 @@
       <div class="collapse navbar-collapse" id='menu'>
         <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
-              <a class="nav-link" href="/registrar_credencial">Registrar Credencial</a>
+              <a class="nav-link" href="/registrar_credencial">Registrar credencial</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/ver_listado">Ver credenciales</a>
@@ -69,7 +69,7 @@
       <div class="collapse navbar-collapse" id="menu">
         <ul class="navbar-nav ml-auto">
           <li>
-            <a class="btn btn-danger" role="button" href="/logout">Cerrar Sesion</a>
+            <a class="btn btn-danger" role="button" href="/logout">Cerrar sesion</a>
           </li>
         </ul>
       </div>
