--- a/projectsegura/projectsegura/templates/iniciar_sesion.html
+++ b/projectsegura/projectsegura/templates/iniciar_sesion.html
@@ -1,6 +1,6 @@
 {% extends 'pg.html' %} 
 
-{% block titulo %} <title>ListadoCredenciales</title> {% endblock %}
+{% block titulo %} <title>Iniciar sesion</title> {% endblock %}
 {% block jumbo %} Iniciar sesión {% endblock %}
 {% block cuerpo %}
 	
