--- a/projectsegura/projectsegura/templates/registrarcredencial.html
+++ b/projectsegura/projectsegura/templates/registrarcredencial.html
@@ -109,7 +109,7 @@
             
             <div class="form-group">
                 <label for="contraseña">Contraseña</label>
-                <input type="password" class="form-control" name="contrasena" id="contrasena" placeholder="Contraseña de la cuenta o servicio" value="{{ contrasena }}">
+                <input type="text" class="form-control" name="contrasena" id="contrasena" placeholder="Contraseña de la cuenta o servicio, o escriba generar para autogenerar una contraseña segura" value="{{ contrasena }}">
             </div>
             
             <div class="form-group">
